reason_4.0/www/local/luther_2014/stylesheets/base.css
/* ... */
/* line 358, scss/_minisite.scss */
#minisite #navWrap .navListTop li a {
  display: block;
  padding: 0.90909rem 1.25rem;
}
/* line 363, scss/_minisite.scss */
#minisite #navWrap .navListTop a.home {
  font-size: 2rem;
  line-height: 1;
  font-weight: 300;
  color: #003a70;
  border-top: none;
  position: relative;
  padding-top: 1.875rem;
  padding-bottom: 1.875rem;
  /*&:after {
  	@extend .fa;
  	content: $fa-var-home;
  	position: absolute;
  	right: 0;
  	top: 0;
  	color: rgba(255,255,255,.25);
  }*/
}
/* line 374, scss/_minisite.scss */
#minisite #navWrap .navListTop a.home strong {
  font-weight: 300;
}
@media only screen and (min-width: 64.063em) {
  /* line 363, scss/_minisite.scss */
  #minisite #navWrap .navListTop a.home {
    padding-top: 2.5rem;
    padding-bottom: 2.5rem;
    background: #a9cdee;
    border-bottom: 6px solid #FFF;
  }
}
/* line 403, scss/_minisite.scss */
#minisite #navWrap .navListTop ul a {
  display: block;
  border-top: 1px solid #d7d7d7;
  color: #303030;
  font-weight: 300;
  font-size: 0.9375rem;
}
/* line 411, scss/_minisite.scss */
#minisite #navWrap .navListTop ul a:hover {
  background: #e9e9e9;
  color: black;
}
/* line 419, scss/_minisite.scss */
#minisite #navWrap .navListTop ul ul a {
  border: none;
  padding: 0.71429rem 1.25rem 0.71429rem 2.5rem;
  border-top: 1px solid #e6e6e6;
}
/* line 424, scss/_minisite.scss */
#minisite #navWrap .navListTop ul ul a:hover {
  background: #f3f3f3;
}
/* line 430, scss/_minisite.scss */
#minisite #navWrap .navListTop ul ul ul li a {
  padding-left: 3.75rem;
}
/* line 435, scss/_minisite.scss */
#minisite #navWrap .navListTop ul .navListItem.open {
  background: #f0f5f8;
  background: #f8f8f8;
}
/* line 440, scss/_minisite.scss */
#minisite #navWrap .navListTop ul .navListItem.open a:hover {
  background: #f3f3f3;
}
/* line 448, scss/_minisite.scss */
#minisite #navWrap .jump a {
  padding-right: 2.25rem;
}
/* line 452, scss/_minisite.scss */
#minisite #navWrap .jump:before {
  content: "\f08e";
  position: absolute;
  top: 1.25rem;
  right: 1.25rem;
}
/* line 469, scss/_minisite.scss */
#minisite #relatedSections > div,
#minisite .relatedItems > div {
  margin-bottom: 2.5rem;
}
/* line 475, scss/_minisite.scss */
#minisite #relatedSections .assets,
#minisite #relatedSections .blurb,
#minisite #relatedSections .relatedEvents,
#minisite .relatedItems .assets,
#minisite .relatedItems .blurb,
#minisite .relatedItems .relatedEvents {
  background: #f6f6f6;
  padding: 1.25rem;
}
/* line 479, scss/_minisite.scss */
#minisite #relatedSections .assets > *:last-child,
#minisite #relatedSections .blurb > *:last-child,
#minisite #relatedSections .relatedEvents > *:last-child,
#minisite .relatedItems .assets > *:last-child,
#minisite .relatedItems .blurb > *:last-child,
#minisite .relatedItems .relatedEvents > *:last-child {
  padding-bottom: 0;
  margin-bottom: 0;
}
/* line 485, scss/_minisite.scss */
#minisite #relatedSections h3,
#minisite .relatedItems h3 {
  font-size: 1.4375rem;
  margin-top: 0;
}
/* line 496, scss/_minisite.scss */
#minisite #footer {
  position: relative;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  width: 100%;
  float: left;
  font-size: 0.75rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}
@media only screen and (min-width: 64.063em) {
  /* line 496, scss/_minisite.scss */
  #minisite #footer {
    position: relative;
    padding-left: 0;
    padding-right: 0;
    width: 100%;
    float: left;
    padding: 1.25rem;
  }
}
/* line 509, scss/_minisite.scss */
#minisite #footer #maintained {
  color: #9d9d9d;
  display: block;
  margin-bottom: 1rem;
}
@media only screen and (min-width: 60.0625em) {
  /* line 509, scss/_minisite.scss */
  #minisite #footer #maintained {
    width: 45%;
    float: left;
    margin-bottom: 0;
    padding-top: 4px;
  }
}
/* line 522, scss/_minisite.scss */
#minisite #footer .loginLinkModule {
  display: block;
}
@media only screen and (min-width: 60.0625em) {
  /* line 522, scss/_minisite.scss */
  #minisite #footer .loginLinkModule {
    width: 45%;
    float: right;
    text-align: right;
  }
}
/* line 531, scss/_minisite.scss */
#minisite #footer .loginLinkModule .editDivider {
  display: none;
}
/* line 533, scss/_minisite.scss */
#minisite #footer .loginLinkModule div {
  display: inline;
}
/* line 536, scss/_minisite.scss */
#minisite #footer .loginLinkModule div a {
  background: #e9e9e9;
  padding: 0.125rem 0.375rem;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  margin-right: 0.25rem;
}
@media only screen and (min-width: 60.0625em) {
  /* line 536, scss/_minisite.scss */
  #minisite #footer .loginLinkModule div a {
    margin-left: 0.25rem;
  }
}
/* line 548, scss/_minisite.scss */
#minisite #footer .loginLinkModule #footerLoginLink {
  display: inline;
  font-size: 0.75rem;
  margin: 0.5rem 0 0;
  background: #e9e9e9;
  padding: 0.125rem 0.375rem;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  margin: 0 0.25rem 0 0;
}
@media only screen and (min-width: 60.0625em) {
  /* line 548, scss/_minisite.scss */
  #minisite #footer .loginLinkModule #footerLoginLink {
    margin: 0 0 0 0.25rem;
  }
}
/* line 561, scss/_minisite.scss */
#minisite #footer .loginLinkModule #footerLoginLink .username {
  font-weight: 400;
}
/* line 566, scss/_minisite.scss */
#minisite #footer .loginLinkModule.unauthenticated #footerLoginLink {
  margin: 0;
}
@media only screen and (min-width: 40.063em) {
  /* line 575, scss/_minisite.scss */
  #minisite .feedLink {
    display: inline;
    text-align: right;
  }
}
/* line 583, scss/_minisite.scss */
#minisite .feedLink .feedInfo a {
  color: transparent;
}
/* line 587, scss/_minisite.scss */
#minisite .feedLink .feedInfo a:before {
  content: "\f09e";
  display: block;
  color: #9f2112;
}
/* ... */

